# production-track-chatbot

./: .gitignore  README.md  app.py  chainlit.md  cli.py  embedding_server.py  pyproject.toml
src/: config.py  embeddings.py  generate.py  ingest.py  retrieve.py
src/eval/: __init__.py  golden.json  harness.py
